--- a/experimental/higepon/scheme-gc/lib/scheme.scm.in
+++ b/experimental/higepon/scheme-gc/lib/scheme.scm.in
@@ -2,6 +2,7 @@
 (load "<LIBDIR>/danny.scm")
 (load "<LIBDIR>/shell.scm")
 (load "<LIBDIR>/timer.scm")
+(load "<LIBDIR>/demo.scm")
 (load "<LIBDIR>/conf.scm")
 ;(load "slib/Template.scm")
 ;(slib:report)
