--- a/experimental/higepon/scheme-gc/lib/demo.scm.in
+++ b/experimental/higepon/scheme-gc/lib/demo.scm.in
@@ -1,5 +1,5 @@
-(define (move-window window start-x start-y direction count coroutine-p)
-  (let* ((step (if (and (symbol? direction) (eq? direction 'right)) 10 -10))
+(define (move-window-right window start-x start-y count coroutine-p)
+  (let* ((step 10)
          (unit-size 200)
          (end-x (+ start-x unit-size))
          (end-y (+ start-y unit-size)))
@@ -16,29 +16,43 @@
             ((and (= x start-x) (>= y start-y) (<= y end-y))
              (loop x (- y step) (+ 1 counter)))))))
 
+(define (move-window-left window start-x start-y count coroutine-p)
+  (let* ((step 10)
+         (unit-size 200)
+         (end-x (+ start-x unit-size))
+         (end-y (+ start-y unit-size)))
+    (let loop ((x start-x) (y start-y) (counter 0))
+      (mona-gui-move-window window x y)
+      (and coroutine-p (pause))
+      (cond ((>= counter (* (/ unit-size step) count 4)) #f)
+            ((and (= x start-x) (>= y start-y) (< y end-y))
+             (loop x (+ y step) (+ 1 counter)))
+            ((and (>= x start-x) (< x end-x) (= y end-y))
+             (loop (+ x step) y (+ 1 counter)))
+            ((and (= x end-x) (<= y end-y) (> y start-y))
+             (loop x (- y step) (+ 1 counter)))
+            ((and (= y start-y) (<= x end-x) (> x start-x))
+             (loop (- x  step) y (+ 1 counter)))))))
+
+
+
 (define (move2)
-  (move-window
+  (move-window-left
    (find (lambda (window) (string=? (mona-gui-get-window-title window) "GUI Shell"))
          (mona-gui-enum-windows))
    100
    200
-   'right
    2
    #t))
 
 (define (move3)
-  (move-window
+  (move-window-right
    (find (lambda (window) (string=? (mona-gui-get-window-title window) "/APPS"))
          (mona-gui-enum-windows))
    10
    20
-   'right
    2
    #t))
-
-
-
-
 
 (define move1 (lambda coroutine
   (aif it (find (lambda (window) (string=? (mona-gui-get-window-title window) "GUI Shell"))
