--- a/mona/tool/mkimg/MONITOR.CFG
+++ b/mona/tool/mkimg/MONITOR.CFG
@@ -7,5 +7,6 @@ SERVER=/SERVERS/KEYBDMNG.EX5
 SERVER=/SERVERS/MOUSE.EX5
 SERVER=/SERVERS/SCREEN.EX5
 SERVER=/SERVERS/NET.EX5
+#SERVER=/APPS/NET.EX5
 SERVER=/SERVERS/SCHEME.EX5
 #SERVER=/SERVERS/SHELL.EX5
