--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -10,6 +10,7 @@ all:
 	cd Gui/gui && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Sysutils/libPci && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Net/NetServer && $(MAKE) && $(MAKE) install
+	cd Net/uip && $(MAKE) && $(MAKE) install
 ### libraries
 	cd Graphics/Mesa && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Gui/libgui && touch dependencies && $(MAKE) && $(MAKE) install
@@ -80,6 +81,7 @@ clean:
 	cd Net/libnet && $(MAKE) clean
 	cd Net/monadat && $(MAKE) clean
 	cd Net/NetServer && $(MAKE) clean
+	cd Net/uip && $(MAKE) clean
 	cd Shells/gshell && $(MAKE) clean
 	cd Shells/mshell && $(MAKE) clean
 	cd Sysutils/libPci && $(MAKE) clean
