--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -15,7 +15,7 @@ all:
 	cd Graphics/Mesa && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Gui/libgui && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Gui/libbaygui && touch dependencies && $(MAKE) && $(MAKE) install
-	cd Net/libnet && $(MAKE) && $(MAKE) install
+#	cd Net/libnet && $(MAKE) && $(MAKE) install
 ### non-gui applications
 	cd Emulators/infones && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Emulators/monamona && touch dependencies && $(MAKE) && $(MAKE) install
