svn merge -r4499:HEAD  . ../../trunk/mona/core/scheme

--- a/mona/core/scheme/Makefile.src.inc
+++ b/mona/core/scheme/Makefile.src.inc
@@ -32,6 +32,8 @@ QuoteFilter.cpp\
 SExp.cpp\
 Kernel.cpp\
 SpecialIf.cpp\
+QuasiQuote.cpp\
+Unquote.cpp\
 SString.cpp\
 Tokenizer.cpp\
 Translator.cpp\
