--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -78,7 +78,7 @@ clean:
 	cd Multimedia/monapeg && $(MAKE) clean
 	cd Multimedia/monappt && $(MAKE) clean
 	cd Multimedia/xmonapeg && $(MAKE) clean
-	cd Net/libnet && $(MAKE) clean
+#	cd Net/libnet && $(MAKE) clean
 	cd Net/monadat && $(MAKE) clean
 	cd Net/net_server_with_kernel && $(MAKE) clean
 	cd Net/uip && $(MAKE) clean
