It accesses 0x00000010 and it has a fault.

--- a/contrib/Multimedia/audio_server2/client/Makefile
+++ b/contrib/Multimedia/audio_server2/client/Makefile
@@ -22,7 +22,7 @@ ADDLINKDEP =
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
 
-ADDLINK += -lpci-imp
+ADDLINK += -lpci-imp -laudioapi-imp
 
 # overwrite install
 install: all
